slide transform, not fixed height, footer fixed

--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
         <!--/ spa/page 关于我们 -->
     </div>
     </div>
-    <div class="footer">
+    <div class="footer navbar-fixed-bottom" style="">
         <div class="files">
             <div class="icp-b">
                 <i>
