--- a/index.html
+++ b/index.html
@@ -106,22 +106,22 @@
                     <div class="col-xs-4">
                         <div class="thumbnail">
                             <img src="www/img/thumbs/01.jpg" />
-                            <h3>{{蒹葭苍苍、白露为霜}}</h3>
-                            <p>{{溯洄从之，道阻且长。溯游从之，宛在水中央}}</p>
+                            <h3>行业动态</h3>
+                            <p>看大数据如何驱动产业创新</p>
                         </div>
                     </div>
                     <div class="col-xs-4">
                         <div class="thumbnail">
                             <img src="www/img/thumbs/02.jpg" />
-                            <h3>{{蒹葭萋萋，白露未晞}}</h3>
-                            <p>{{溯洄从之，道阻且跻。溯游从之，宛在水中坻}}</p>
+                            <h3>公司产品</h3>
+                            <p>iMammoth-大租户大数据平台</p>
                         </div>
                     </div>
                     <div class="col-xs-4">
                         <div class="thumbnail">
                             <img src="www/img/thumbs/03.jpg" />
-                            <h3>{{蒹葭采采，白露未已}}</h3>
-                            <p>{{溯洄从之，道阻且右。溯游从之，宛在水中沚}}</p>
+                            <h3>行业解决方案</h3>
+                            <p>国家电网某省公司解决方案</p>
                         </div>
                     </div>
                 </div>
