--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         .flexslider .slides li {
             cursor: pointer;
         }
+	.thumbnail { cursor: pointer}
     </style>
 </head>
 <body>
