temporary thumbnails callback

--- a/index.html
+++ b/index.html
@@ -105,21 +105,21 @@
             <div class="container idc-con-thumbs">
                 <div class="row">
                     <div class="col-xs-4">
-                        <div class="thumbnail">
+                        <div class="thumbnail" onclick="console.log('DDC');">
                             <img src="www/img/thumbs/01.jpg" />
                             <h3>行业动态</h3>
                             <p>看大数据如何驱动产业创新</p>
                         </div>
                     </div>
                     <div class="col-xs-4">
-                        <div class="thumbnail">
+                        <div class="thumbnail" onclick="routie('production')">
                             <img src="www/img/thumbs/02.jpg" />
                             <h3>公司产品</h3>
                             <p>iMammoth-大租户大数据平台</p>
                         </div>
                     </div>
                     <div class="col-xs-4">
-                        <div class="thumbnail">
+                        <div class="thumbnail" onclick="routie('solu')">
                             <img src="www/img/thumbs/03.jpg" />
                             <h3>行业解决方案</h3>
                             <p>国家电网某省公司解决方案</p>
