--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                         <div class="thumbnail" data-target="product">
                             <img src="www/img/thumbs/02.jpg" />
                             <h3>公司产品</h3>
-                            <p>iMammoth-大租户大数据平台</p>
+                            <p>iMammoth-多租户大数据平台</p>
                         </div>
                     </div>
                     <div class="col-xs-4">
