字体缩放 fix1:temporary

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                     <div class="col-xs-4">
                         <div class="thumbnail" data-target="solu">
                             <img src="www/img/thumbs/03.jpg" />
-                            <h3>行业解决方案</h3>
+                            <h3>解决方案</h3>
                             <p>国家电网某省公司解决方案</p>
                         </div>
                     </div>
