rm temp CNAME file, update index:add top tab for bicloud

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="css/flexslider.css"/>
     <link rel="stylesheet" href="css/idc.css"/>
     <link rel="icon" href="img/favicon.ico" type="image/x-icon"/>
-    <meta name="keywords" content="融智辉腾,photons,平台,Hadoop,Hive,Hbase,Spark,Flume, Flume-ng,Strom,Zookeeper,Shark,Pig,Mapreduce,HDFS,YARN,Guava,大数据,海量数据处理">
-    <meta name="description" content="融智辉腾,photons, iMammoth,平台,Hadoop,Hive,Hbase,Spark,Flume, Flume-ng,Strom,Zookeeper,Shark,Pig,Mapreduce,HDFS,YARN,Guava,大数据,海量数据处理">
+    <meta name="keywords" content="融智辉腾,photons,平台,Hadoop,Hive,Hbase,Spark,Flume,Strom,Zookeeper,Shark,Pig,Mapreduce,HDFS,YARN,Guava,大数据,海量数据处理">
+    <meta name="description" content="融智辉腾,photons, iMammoth,平台,Hadoop,Hive,Hbase,Spark,Flume,Strom,Zookeeper,Shark,Pig,Mapreduce,HDFS,YARN,Guava,大数据,海量数据处理">
     <style type="text/css">
         span.solgan {display: none!important}
         /*.idc-con-thumbs h3, .idc-con-thumbs p {
@@ -87,6 +87,11 @@
                     行业应用
                 </a>
             </li>
+            <li class="nav nav-app">
+                <a href="#bicloud">
+                    智酷云
+                </a>
+            </li>
             <li class="nav nav-about">
                 <a href="#about">
                     关于我们
@@ -127,13 +132,13 @@
                         <div class="thumbnail" data-target="product">
                             <img src="www/img/thumbs/02.jpg" />
                             <h3>公司产品</h3>
-                            <p>iMammoth-多租户大数据平台</p>
+                            <p>iMammoth-大租户大数据平台</p>
                         </div>
                     </div>
                     <div class="col-xs-4">
                         <div class="thumbnail" data-target="solu">
                             <img src="www/img/thumbs/03.jpg" />
-                            <h3>解决方案</h3>
+                            <h3>行业解决方案</h3>
                             <p>国家电网某省公司解决方案</p>
                         </div>
                     </div>
