--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="css/flexslider.css"/>
     <link rel="stylesheet" href="css/idc.css"/>
     <link rel="icon" href="img/favicon.ico" type="image/x-icon"/>
-    <meta name="keywords" content="融智辉腾,photons,平台,Hadoop,Hive,Hbase,Spark,Flume,Strom,Zookeeper,Shark,Pig,Mapreduce,HDFS,YARN,Guava,大数据,海量数据处理">
-    <meta name="description" content="融智辉腾,photons, iMammoth,平台,Hadoop,Hive,Hbase,Spark,Flume,Strom,Zookeeper,Shark,Pig,Mapreduce,HDFS,YARN,Guava,大数据,海量数据处理">
+    <meta name="keywords" content="融智辉腾,photons,平台,Hadoop,Hive,Hbase,Spark,Flume, Flume-ng,Strom,Zookeeper,Shark,Pig,Mapreduce,HDFS,YARN,Guava,大数据,海量数据处理">
+    <meta name="description" content="融智辉腾,photons, iMammoth,平台,Hadoop,Hive,Hbase,Spark,Flume, Flume-ng,Strom,Zookeeper,Shark,Pig,Mapreduce,HDFS,YARN,Guava,大数据,海量数据处理">
     <style type="text/css">
         span.solgan {display: none!important}
         /*.idc-con-thumbs h3, .idc-con-thumbs p {
