--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     行业应用
                 </a>
             </li>
-            <li class="nav nav-app">
+            <li class="nav nav-bicloud">
                 <a href="#bicloud">
                     智酷云
                 </a>
@@ -152,6 +152,14 @@
                         <ul class="nav nav-tabs nav-stacked" role="tablist">
                             <li class="active" role="presentation">
                                 <a href="javascript:;" data-toggle="tab"
+                                   data-target="#product-iMaya"
+                                   aria-controls="product-iMaya"
+                                   aria-expanded="true">
+                                    iMaya
+                                </a>
+                            </li>
+                            <li class="" role="presentation">
+                                <a href="javascript:;" data-toggle="tab"
                                    data-target="#product-iMammoth"
                                    aria-controls="product-iMammoth"
                                    aria-expanded="true">
@@ -159,6 +167,14 @@
                                 </a>
                             </li>
                             <li class="" role="presentation">
+                                <a href="javascript:;" data-toggle="tab"
+                                   data-target="#product-iThinkCool"
+                                   aria-controls="product-iThinkCool"
+                                   aria-expanded="true">
+                                    iThinkCool-思酷
+                                </a>
+                            </li>
+                            <li class="hide" role="presentation">
                                 <a href="javascript:;" data-toggle="tab"
                                    data-target="#product-ebuy"
                                    aria-controls="product-ebuy"
@@ -169,13 +185,28 @@
                         </ul>
                     </div>
                     <div class="col-xs-10 col-md-9 tab-content" role="main">
-                        <div class="tab-pane active fade in" role="tabpanel" id="product-iMammoth">
+                        <div class="tab-pane fade active in" role="tabpanel" id="product-iMaya">
                             <h2 class="solu-h2">产品介绍</h2>
                             <ol>
                                 <li>
-                                    iMammoth 作为基于业界主流Hadoop 计算框架之上开发的，为企业大数据分析人员和运维人员提供可管，可控，可运营，易操作的大数据MR 分析环境，为企业解决了人才，管理与运维问题。
+                                    大数据云服务管理系统。
                                 </li>
-                                <li class="">
+                            </ol>
+                            <h2 class="solu-h2">产品特性</h2>
+                            <ol>
+                                <li>
+                                    具备多租户数据安全管理能力。
+                                </li>
+                            </ol>
+                        </div>
+                        <!-- / iMaya-->
+                        <div class="tab-pane fade" role="tabpanel" id="product-iMammoth">
+                            <h2 class="solu-h2">产品介绍</h2>
+                            <ol>
+                                <li>
+                                    基于虚拟IT资源的Hadoop分布式计算系统。
+                                </li>
+                                <!-- <li class="">
                                     我们提供完整的Hadoop 计算环境，在X86 平台上部署并提供数据分析，日常运维，环境优化
                                     等服务。同时，我们提供数据挖掘服务，为企业最大限度的发现数据价值。
                                 </li>
@@ -192,10 +223,10 @@
                                 <li class="">
                                     我们提供分析展现工具－Colorful Viewer，实现快速的数据报告，OLAP 分析。支持PC，
                                     iOS，Android 的展现与分析。
-                                </li>
+                                </li> -->
                             </ol>
-                            <h2 class="solu-h2">产品特性</h2>
-                            <ol>
+                            <h2 class="solu-h2 hide">产品特性</h2>
+                            <ol class="hide">
                                 <li>
                                     支持主流Haoop
                                     iMammoth 支持业界主流的Hadoop计算框架，例如：ADH，Cloudera等
@@ -219,6 +250,21 @@
                             </ol>
                         </div>
                         <!-- / imamoth-->
+                        <div class="tab-pane fade" role="tabpanel" id="product-iThinkCool">
+                            <h2 class="solu-h2">产品介绍</h2>
+                            <ol>
+                                <li>
+                                    行业大数据创新平台。
+                                </li>
+                            </ol>
+                            <h2 class="solu-h2">产品特性</h2>
+                            <ol>
+                                <li>
+                                    多租户，分布式离线，实时计算，构建在虚拟化IaaS之上，采用x86+SSD存储＋万兆网互连等。
+                                </li>
+                            </ol>
+                        </div>
+                        <!-- / iThinkCool-->
                         <div class="tab-pane fade" role="tabpanel" id="product-ebuy">
                             <h2 class="solu-h2">终端支持</h2>
                             <p class="">
@@ -382,11 +428,52 @@
         <div id="app" class="page-content">
             <div class="container">
                 <div class="row">
-                    <h2 class="solu-h2">应用</h2>
+                    <div class="col-xs-2 col-md-3">
+                        <ul class="nav nav-tabs nav-stacked" role="tablist">
+                            <li class="active" role="presentation">
+                                <a href="javascript:;" data-toggle="tab"
+                                   data-target="#app-stateTraffic"
+                                   aria-controls="app-stateTraffic"
+                                   aria-expanded="true">
+                                    交通部中国交通通信中心大数据云服务平台
+                                </a>
+                            </li>
+                            <li class="" role="presentation">
+                                <a href="javascript:;" data-toggle="tab"
+                                   data-target="#app-stateElectronic"
+                                   aria-controls="app-stateElectronic"
+                                   aria-expanded="true">
+                                    国家电网某省公司大数据PaaS平台
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-xs-10 col-md-9 tab-content" role="main">
+                        <div class="tab-pane fade active in" id="app-stateTraffic">
+                            <h2 class="solu-h2">简介</h2>
+                            <p class="">
+                                对全国的“两客一危”车辆实现动态化监管，同时为社会提供所需数据服务。
+                            </p>
+                        </div>
+                        <div class="tab-pane fade" id="app-stateElectronic">
+                            <h2 class="solu-h2">简介</h2>
+                            <p class="">
+                                为国网某省公司内的部门，单位提供统一的大数据管理计算与数据服务平台，减少重复投资，同时优化大数据相关人才的组织结构管理，改善了企业数据资产集约化管理的能力，提升了企业大数据创新服务能力，加快了信息化企业建设步伐。
+                            </p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-        <!--/ spa/page 应用 -->
+        <!--/ spa/page 行业应用 成功案例 -->
+        <div id="bicloud" class="page-content">
+            <div class="container">
+                <div class="row">
+                    <h2 class="solu-h2">智酷云</h2>
+                </div>
+            </div>
+        </div>
+        <!--/ spa/page 智酷云 -->
         <div id="about" class="page-content">
             <div class="container">
                 <div class="row">
@@ -402,21 +489,29 @@
                             </li>
                             <li class="" role="presentation">
                                 <a href="javascript:;" data-toggle="tab"
+                                   data-target="#about-dream"
+                                   aria-controls="about-dream"
+                                   aria-expanded="true">
+                                    公司愿景
+                                </a>
+                            </li>
+                            <li class="" role="presentation">
+                                <a href="javascript:;" data-toggle="tab"
                                    data-target="#about-culture"
                                    aria-controls="about-culture"
                                    aria-expanded="true">
                                     企业文化
                                 </a>
                             </li>
-                            <li class="disabled" role="presentation">
+                            <li class="" role="presentation">
                                 <a href="javascript:;" data-toggle="tab"
                                    data-target="#about-mgmt"
                                    aria-controls="about-mgmt"
                                    aria-expanded="true">
-                                    管理团队
+                                    公司服务理念
                                 </a>
                             </li>
-                            <li class="" role="presentation">
+                            <li class="hide" role="presentation">
                                 <a href="javascript:;" data-toggle="tab"
                                    data-target="#about-mem"
                                    aria-controls="about-mem"
@@ -424,7 +519,7 @@
                                     合作伙伴
                                 </a>
                             </li>
-                            <li class="" role="presentation">
+                            <li class="hide" role="presentation">
                                 <a href="javascript:;" data-toggle="tab"
                                    data-target="#about-link"
                                    aria-controls="about-link"
@@ -432,7 +527,7 @@
                                     联系我们
                                 </a>
                             </li>
-                            <li class="disabled" role="presentation">
+                            <li class="disabled hide" role="presentation">
                                 <a href="javascript:;" data-toggle="tab"
                                    data-target="#about-job"
                                    aria-controls="about-job"
@@ -445,27 +540,19 @@
                     <div class="col-xs-10 col-md-9" role="main">
                         <div class="tab-pane fade active in" role="tabpanel" id="about-outline">
                             <ul class="" style="padding-left:0;">
-                                <li class="">北京融智辉腾科技有限公司成立于2014 年4月，总部设在北京，在上海，广州设有办事处。</li>
-                                <li class="">还设有武汉研发中心，武汉交付中心和北京交付中心。</li>
-                                <li class="">公司规模近50 人。</li>
-                                <li class="">是一家创业创新型高速发展的数据智能化高科技企业。</li>
-                                <li class="">公司核心领导人员来自世界著名的IT 与互联网公司，如：ORACLE，IBM，HP，百度，阿里巴巴。</li>
-                                <li class="">公司致力于基于数据的智能化产品，应用及解决方案。在交通，电信，能源，金融保险等行业有非常好的实践与成功案例。</li>
-                                <li class="">为客户创造价值是我们的责任，我们致力于利用数据发现科技来优化与变革传统的业务模式。</li>
-                                <li class="">为此，我们提供如下的优秀产品与优质服务：</li>
+                                <li class="">“北京融智辉腾科技有限公司”成立于2014年4月，是一家专注于数据智能化解决方案的高科技创新企业。</li>
+                                <li class="">总部设在北京，在上海设有办事处。还设有武汉研发与交付中心。</li>
+                                <li class="">公司核心技术与管理团队来自世界著名的IT与互联网公司，如：ORACLE，IBM，美国Google、Accenture、百度，阿里巴巴等， 85%的团队为技术工程师。</li>
+                                <li class="">北京融智辉腾科技有限公司主要从事基于大数据的智能化产品与应用研发，同时致力于基于大数据服务云的研发与运营服务。</li>
+                                <li class="">为客户提供基于数据智能化的解决方案，在交通，电信，能源，移动互联网等行业有非常好的实践与成功案例。</li>
+                                <li class="">公司专业化的服务团队提供从应用探索、系统规划、概念验证、部署优化到应用开发等的一系列专业服务。</li>
                             </ul>
-                            <h2 class="solu-h2">1) 数据平台产品:</h2>
-                            <p class="">
-                                iMammoth 是基于业界主流Hadoop 框架开发的一套多租户大数据开发平台。
-                            </p>
-                            <h2 class="solu-h2">2) 数据动态交付分析产品:</h2>
-                            <p class="">
-                                Colorful Viewer 是一套支持动态OLAP 分析，报表分析与展现的快速实现工具。具有开发快速，展现丰富，动态交互的特点。
-                            </p>
                         </div>
+                        <div class="tab-pane fade" role="tabpanel" id="about-dream">
+                            打造基于大数据的智慧产品与服务，推动国家创新，创造美好生活。</div>
                         <div class="tab-pane fade" role="tabpanel" id="about-culture">
-                            以客户满意为中心，以创新服务促产出，数据智能改变生活</div>
-                        <div class="tab-pane fade" role="tabpanel" id="about-mgmt"></div>
+                            创新，厚德，进取，发展。</div>
+                        <div class="tab-pane fade" role="tabpanel" id="about-mgmt">为客户创造价值。</div>
                         <div class="tab-pane fade" id="about-mem">
                             国家电网某省公司，中国交通，电信公司等等
                         </div>
@@ -607,9 +694,14 @@ $(function () {
             return false;
         },
         "app": function () {
-            console.log('开发中...');
-//            switchNav('app');
+            // console.log('开发中...');
+           switchNav('app');
             return false;
+        },
+        "bicloud": function () {
+           // console.log('开发中...');
+           switchNav('bicloud');
+            return false;  
         },
         "about": function () {
             switchNav('about');
