--- a/index.html
+++ b/index.html
@@ -516,6 +516,7 @@
             <div class="container">
                 <div class="row">
                     <h2 class="solu-h2">智酷云</h2>
+                    <p>iDadaCool Cloud 大数据创新服务云服务</p>
                 </div>
             </div>
         </div>
@@ -584,15 +585,24 @@
                         </ul>
                     </div>
                     <div class="col-xs-10 col-md-9" role="main">
-                        <div class="tab-pane fade active in" role="tabpanel" id="about-outline">
+                        <!-- <div class="tab-pane fade active in" role="tabpanel" id="about-outline">
                             <ul class="" style="padding-left:0;">
-                                <li class="">“北京融智辉腾科技有限公司”成立于2014年4月，是一家专注于数据智能化解决方案的高科技创新企业。</li>
+                                <li class="">&nbsp;&nbsp;“北京融智辉腾科技有限公司”成立于2014年4月，是一家专注于数据智能化解决方案的高科技创新企业。</li>
                                 <li class="">总部设在北京，在上海设有办事处。还设有武汉研发与交付中心。</li>
                                 <li class="">公司核心技术与管理团队来自世界著名的IT与互联网公司，如：ORACLE，IBM，美国Google、Accenture、百度，阿里巴巴等， 85%的团队为技术工程师。</li>
-                                <li class="">北京融智辉腾科技有限公司主要从事基于大数据的智能化产品与应用研发，同时致力于基于大数据服务云的研发与运营服务。</li>
+                                <li>&nbsp;</li>
+                                <li class="">&nbsp;&nbsp;&nbsp;&nbsp;北京融智辉腾科技有限公司主要从事基于大数据的智能化产品与应用研发，同时致力于基于大数据服务云的研发与运营服务。</li>
                                 <li class="">为客户提供基于数据智能化的解决方案，在交通，电信，能源，移动互联网等行业有非常好的实践与成功案例。</li>
                                 <li class="">公司专业化的服务团队提供从应用探索、系统规划、概念验证、部署优化到应用开发等的一系列专业服务。</li>
                             </ul>
+                        </div> -->
+                        <div class="tab-pane fade active in" role="tabpanel" id="about-outline">
+                            <p>
+                                &nbsp;&nbsp;“北京融智辉腾科技有限公司”成立于2014年4月，是一家专注于数据智能化解决方案的高科技创新企业。总部设在北京，在上海设有办事处。还设有武汉研发与交付中心。公司核心技术与管理团队来自世界著名的IT与互联网公司，如：ORACLE，IBM，美国Google、Accenture、百度，阿里巴巴等， 85%的团队为技术工程师。
+                            </p>
+                            <p>
+                                &nbsp;&nbsp;&nbsp;&nbsp;北京融智辉腾科技有限公司主要从事基于大数据的智能化产品与应用研发，同时致力于基于大数据服务云的研发与运营服务。为客户提供基于数据智能化的解决方案，在交通，电信，能源，移动互联网等行业有非常好的实践与成功案例。公司专业化的服务团队提供从应用探索、系统规划、概念验证、部署优化到应用开发等的一系列专业服务。
+                            </p>
                         </div>
                         <div class="tab-pane fade" role="tabpanel" id="about-dream">
                             打造基于大数据的智慧产品与服务，推动国家创新，创造美好生活。</div>
