photons company talk, v0309 impl: stage:to be confirm

--- a/index.html
+++ b/index.html
@@ -337,28 +337,31 @@
                         <div class="tab-pane fade" id="service-dataMaintain">{{content}}</div>
                         <div class="tab-pane fade active in" id="service-dataConsult">
                             <h2 class="solu-h2">简介</h2>
-                            <ol>
+                            <ul>
                                 <li>
-                                    基于大数据或数据的－IT规划咨询，管理咨询，业务咨询，技术咨询。
+                                    <!-- 基于大数据或数据的－IT规划咨询，管理咨询，业务咨询，技术咨询。 -->
+                                    基于数据智能化的规划咨询，管理咨询，业务与技术咨询服务。
                                 </li>
-                            </ol>
+                            </ul>
                         </div>
                         <!-- / 咨询服务 -->
                         <div class="tab-pane fade" id="service-itService">
                             <h2 class="solu-h2">简介</h2>
-                            <ol>
+                            <ul>
                                 <li>
-                                    基于大数据的安装，实施，应用开发，运维，培训等。
+                                    <!-- 基于大数据的安装，实施，应用开发，运维，培训等。 -->
+                                    基于大数据采集汇聚，数据融合存储与计算，数据服务的IT实施服务。
                                 </li>
-                            </ol>
+                            </ul>
                         </div>
                         <div class="tab-pane fade" id="service-solu">
                             <h2 class="solu-h2">简介</h2>
-                            <ol>
+                            <ul>
                                 <li>
-                                    基于大数据的行业解决方案。
+                                    <!-- 基于大数据的行业解决方案。 -->
+                                    提供行业数据云解决方案。在交通，能源，移动互联网行业成功案例。
                                 </li>
-                            </ol>
+                            </ul>
                         </div>
                     </div>
                 </div>
@@ -514,10 +517,19 @@
         <!--/ spa/page 行业应用 成功案例 -->
         <div id="bicloud" class="page-content">
             <div class="container">
-                <div class="row">
-                    <h2 class="solu-h2">智酷云</h2>
-                    <p>iDadaCool Cloud 大数据创新服务云服务</p>
-                </div>
+                <article class style="width: 890px;margin: 0 auto;">
+                    <h2 class="solu-h2">iDadaCool Cloud 大数据创新服务云服务</h2>
+                    <p>&nbsp;&nbsp;&nbsp;&nbsp;“智酷云”提供企业，政府，公众用户提供大数据与传统数据及互联网数据采集汇聚，存储与计算，数据服务与创新于一体的大数据服务管理创新云。用户可以在数据酷云上获得安全的大数据计算服务和创新基于数据的应用服务。
+                    </p>
+                    <h3 class="solu-h2">智酷云适用场景：</h3>
+                    <ol>
+                        <li>
+                            企业：无需具备大数据专业团队，为下属单位部门提供分布式数据计算能力，数据融合与存储能力，对Internet数据有定向采集需求等；
+                        </li>
+                        <li>政府：无需具备大数据专业团队，有数据公开发布需求，对数据集有采集汇聚，存储与计算需求，数据安全隔离授权使用需求，对Internet数据有定向采集需求等；</li>
+                        <li>个人：不具备大数据运行环境，希望学习大数据技术（具备分布式计算环境，具备大数据体验存储量用于学习实验），基于大数据的创新需求等。</li>
+                    </ol>
+                </article>
             </div>
         </div>
         <!--/ spa/page 智酷云 -->
