raw slider 3 img

--- a/index.html
+++ b/index.html
@@ -114,7 +114,8 @@
                          <img src="www/img/idc-slide02.jpg"/>
                     </li>
                     <li>
-                        <img src="www/img/idc-slide03.jpg"/>
+                        <!--<img src="www/img/idc-slide03.jpg"/>-->
+                        <img src="https://raw.githubusercontent.com/idatacool/photons/master/share/cdn/img/photons/idc-slide03.jpg" />
                     </li>
                 </ul>
             </div>
