--- a/index.html
+++ b/index.html
@@ -114,8 +114,7 @@
                          <img src="www/img/idc-slide02.jpg"/>
                     </li>
                     <li>
-                        <!--<img src="www/img/idc-slide03.jpg"/>-->
-                        <img src="https://raw.githubusercontent.com/idatacool/photons/master/share/cdn/img/photons/idc-slide03.jpg" />
+                        <img src="www/img/idc-slide03.jpg"/>
                     </li>
                 </ul>
             </div>
@@ -136,7 +135,7 @@
                         <div class="thumbnail" data-target="product">
                             <img src="www/img/thumbs/02.jpg" />
                             <h3>公司产品</h3>
-                            <p>iMammoth-多租户大数据平台</p>
+                            <p>iMaya－大数据管理运维系统</p>
                         </div>
                     </div>
                     <div class="col-xs-4">
@@ -341,31 +340,31 @@
                         <div class="tab-pane fade" id="service-dataMaintain">{{content}}</div>
                         <div class="tab-pane fade active in" id="service-dataConsult">
                             <h2 class="solu-h2">简介</h2>
-                            <ul>
+                            <ol>
                                 <li>
                                     <!-- 基于大数据或数据的－IT规划咨询，管理咨询，业务咨询，技术咨询。 -->
                                     基于数据智能化的规划咨询，管理咨询，业务与技术咨询服务。
                                 </li>
-                            </ul>
+                            </ol>
                         </div>
                         <!-- / 咨询服务 -->
                         <div class="tab-pane fade" id="service-itService">
                             <h2 class="solu-h2">简介</h2>
-                            <ul>
+                            <ol>
                                 <li>
                                     <!-- 基于大数据的安装，实施，应用开发，运维，培训等。 -->
                                     基于大数据采集汇聚，数据融合存储与计算，数据服务的IT实施服务。
                                 </li>
-                            </ul>
+                            </ol>
                         </div>
                         <div class="tab-pane fade" id="service-solu">
                             <h2 class="solu-h2">简介</h2>
-                            <ul>
+                            <ol>
                                 <li>
                                     <!-- 基于大数据的行业解决方案。 -->
                                     提供行业数据云解决方案。在交通，能源，移动互联网行业成功案例。
                                 </li>
-                            </ul>
+                            </ol>
                         </div>
                     </div>
                 </div>
@@ -431,28 +430,34 @@
                                 </li>
                             </ol>
                             <h2 class="solu-h2">特点</h2>
-                            <p class="">
-                                一个大数据平台，一套运维人员，多个企业内部用户，简单易用的开发环境和运维环境。
-                            </p>
+                            <ol>
+                                <li>一个大数据平台，一套运维人员，多个企业内部用户，简单易用的开发环境和运维环境。</li>
+                            </ol>
                             <h2 class="solu-h2">益处</h2>
-                            <p class="">
-                                减少重复建设，聚合人才能力。
-                            </p>
+                            <ol>
+                                <li>
+                                    减少重复建设，聚合人才能力。
+                                </li>
+                            </ol>
                         </div>
                         <!--/ 国网某电力公司-->
                         <div class="tab-pane fade" id="solu-traffic">
                             <h2 class="solu-h2">简介</h2>
-                            <p class="">
-                                利用iMammoth 实现全国危险货车，客运班线，旅游包车的动态监控与管理，以及城际间国道，省道的路况分析
-                            </p>
+                            <ol>
+                                <li>
+                                    利用iMammoth 实现全国危险货车，客运班线，旅游包车的动态监控与管理，以及城际间国道，省道的路况分析。
+                                </li>
+                            </ol>
                         </div>
                         <!--/ 医疗行业 -->
                         <!-- / 中国交通运输 -->
                         <div class="tab-pane fade" id="solu-telecommunications">
                             <h2 class="solu-h2">简介</h2>
-                            <p class="">
-                                利用Colorful Viewer 实现用户上网快速分析与报告。
-                            </p>
+                            <ol>
+                                <li>
+                                    利用Colorful Viewer 实现用户上网快速分析与报告。
+                                </li>
+                            </ol>
                         </div>
                         <!--/ 电信行业 -->
                         <div class="tab-pane fade" id="solu-medicine">
@@ -498,21 +503,27 @@
                     <div class="col-xs-10 col-md-9 tab-content" role="main">
                         <div class="tab-pane fade active in" id="app-stateTraffic">
                             <h2 class="solu-h2">简介</h2>
-                            <p class="">
-                                对全国的“两客一危”车辆实现动态化监管，同时为社会提供所需数据服务。
-                            </p>
+                            <ol>
+                                <li>
+                                    对全国的“两客一危”车辆实现动态化监管，同时为社会提供所需数据服务。
+                                </li>
+                            </ol>
                         </div>
                         <div class="tab-pane fade" id="app-stateElectronic">
                             <h2 class="solu-h2">简介</h2>
-                            <p class="">
-                                为国网某省公司内的部门，单位提供统一的大数据管理计算与数据服务平台，减少重复投资，同时优化大数据相关人才的组织结构管理，改善了企业数据资产集约化管理的能力，提升了企业大数据创新服务能力，加快了信息化企业建设步伐。
-                            </p>
+                            <ol>
+                                <li>
+                                    为国网某省公司内的部门，单位提供统一的大数据管理计算与数据服务平台，减少重复投资，同时优化大数据相关人才的组织结构管理，改善了企业数据资产集约化管理的能力，提升了企业大数据创新服务能力，加快了信息化企业建设步伐。
+                                </li>
+                            </ol>
                         </div>
                         <div class="tab-pane fade" id="app-medicine">
                             <h2 class="solu-h2">简介</h2>
-                            <p class="">
-                                亲子医生。
-                            </p>
+                            <ol>
+                                <li>
+                                     亲子医生。
+                                </li>
+                            </ol>
                         </div>
                     </div>
                 </div>
